# hikki

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
module/: default.nix
src/: config.rs  editor.rs  input.rs  lib.rs  links.rs  main.rs  mcp.rs  notes.rs  render.rs  scripting.rs  search.rs
src/platform/: mod.rs
src/platform/macos/: mod.rs
